--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,18 @@
-
 body {
-    font-family: Arial, sans-serif; 
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0;
 }
+
 #app {
-    background: rgba(176, 172, 162, 0.8);
+    background: #8f8f8fd5;
     padding: 20px;
     border-radius: 5px;
-    box-shadow:  rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 300px;
     text-align: center;
 }
@@ -30,32 +31,6 @@ button {
     padding: 5px 10px;
 }
 
-#weather-result, #favorites {
+#weather-result {
     margin-top: 20px;
-}
-
-#favorites-list {
-    list-style: none;
-    padding: 0;
-}
-
-.favorite-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.favorite-item button {
-    margin-left: 10px;
-}
-
-#audio-controls {
-    margin-top: 20px;
-    text-align: center;
-}
-
-#audio-controls button {
-    padding: 10px;
-    margin: 5px;
-    cursor: pointer;
 }
